config/opa/opa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa-ingress
  namespace: opa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: swsnsopa
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opa
                port:
                  number: 81
